force-app/main/default/objects/Marketing_Interaction__c/Marketing_Interaction__c.object-meta.xml
<CustomObject>
    <label>Marketing Interaction</label>
    <pluralLabel>Marketing Interactions</pluralLabel>
    <description>One row per cross-channel interaction. This is the grain that makes frequency capping computable; one row per campaign cannot produce a per-contact count.</description>
</CustomObject>