force-app/main/default/objects/Marketing_Interaction__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Text</type>
    <length>80</length>
</CustomField>