force-app/main/default/objects/Marketing_Interaction__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>Email</fullName><label>Email</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>SMS</fullName><label>SMS</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>WhatsApp</fullName><label>WhatsApp</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Push</fullName><label>Push</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Advertising</fullName><label>Advertising</label></value></valueSetDefinition>
    </valueSet>
</CustomField>