force-app/main/default/objects/Marketing_Interaction__c/fields/Frequency_30d__c.field-meta.xml
<CustomField>
    <fullName>Frequency_30d__c</fullName>
    <label>Frequency_30d</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>