force-app/main/default/objects/Marketing_Interaction__c/fields/InteractionDate__c.field-meta.xml
<CustomField>
    <fullName>InteractionDate__c</fullName>
    <label>Interaction Date</label>
    <type>DateTime</type>
</CustomField>