force-app/main/default/objects/Marketing_Interaction__c/fields/Within_QuietHours__c.field-meta.xml
<CustomField>
    <fullName>Within_QuietHours__c</fullName>
    <label>Within_Quiet Hours</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>